--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="ENERGIA.jpg">
-    <h1 id="titulo" >Energia</h1>
+    <img src="FUTEBOLBR.jpg">
+    <h1 id="titulo" >Futebol Brasileiro</h1>
       <!-- este é comentario, no html. Não usa barra//-->
-    <p class="texto">Energia na Física é um conceito extremamente importante e representa
-         a capacidade de produzir <strong><em></em>trabalho</em></strong> .
+    <p class="texto">O futebol brasileiro está entre as principais Potência <strong><em></em>trabalho</em></strong> .
        
    Os seres vivos dependem da energia para sobreviverem e a obtêm através da alimentação
      (energia química). Além disso, os organismos também recebem energia (luz e calor) do Sol. </p>
